# advent-of-code-2k19

./: Cargo.toml  README.md
src/: day1.rs  day2.rs  day3.rs  day4.rs  day6.rs  lib.rs
src/day5/: mod.rs  operations.rs  utils.rs
