[package]
name = "advent-of-code-2k19"
version = "0.1.0"
authors = ["tehAnswer <sergiorodriguezgijon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
rayon = "1.1"
